--- a/index.html
+++ b/index.html
@@ -286,8 +286,9 @@
                         <div class="activity-item">
                             <h5>Activity 7: Small Grants All Over Iraq</h5>
                             <div class="activity-date">March 2025</div>
-                            <p>Implementation across 19 governorates including Erbil, Sulaimanya, Halabja, Baghdad, Misan, Mosul, Babil, Diwanya, Duhok, Waset, Najaf, Muthana, Kirkuk, Thiqar, Diyala, Basra, Salahaddin, Anbar, and Karbala.</p>
+                            <p>Implementation across 19 governorates including , Sulaimanya, Halabja, Baghdad, Misan, Mosul, Babil, Diwanya, Duhok, Waset, Najaf, Muthana, Kirkuk, Thiqar, Diyala, Basra, Salahaddin, Anbar, and Karbala.</p>
                             <div class="governorate-links">
+                                <a href="https://www.facebook.com/PFOORG/posts/pfbid02HgKWc2B8qGapUDL3AC6M2kL7ZeJeQVPAnB2DRpwPGWTNDpbzQfKuFiwsNGSmgdQtl" target="_blank">Erbil</a>
                                 <a href="https://www.facebook.com/PFOORG/posts/pfbid02HgKWc2B8qGapUDL3AC6M2kL7ZeJeQVPAnB2DRpwPGWTNDpbzQfKuFiwsNGSmgdQtl" target="_blank">Erbil</a>
                                 <a href="https://www.facebook.com/story.php?story_fbid=1071852084974846&id=100064501940434" target="_blank">Rania (Sulaimanya)</a>
                                 <a href="https://www.facebook.com/story.php?story_fbid=1080706454089409&id=100064501940434" target="_blank">Halabja</a>
