--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h2 class="subtitle">Media Coverage Dashboard 2024-2025</h2>
             <div class="header-stats">
                 <div class="stat-item">
-                    <span class="stat-number">10</span>
-                    <span class="stat-label">Activities</span>
+                    <span class="stat-number">66</span>
+                    <span class="stat-label">Activities-Initiatives-Grants</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-number">19</span>
@@ -256,7 +256,7 @@
                                 <a href="https://www.facebook.com/XelkNews/videos/1705473886657252" target="_blank">Xelk Media</a>
                                 <a href="https://iraq24.news/kurd/" target="_blank">Al Iraq 24</a>
                                 <a href="https://mangish.net/" target="_blank">Mangish.net</a>
-                                <a href="https://baghdad24.news/" target="_blank">Baghdad24.news</a>
+                                <a href="https://24.news/" target="_blank">Baghdad24.news</a>
                                 <a href="https://pfo-ku.org/index.php/en/news-activates/1784-towards-a-national-action-plan-to-implement-unscr-2250-in-iraq-and-the-kurdistan-region" target="_blank">PFO Media</a>
                             </div>
                         </div>
@@ -286,13 +286,15 @@
                         <div class="activity-item">
                             <h5>Activity 7: Small Grants All Over Iraq</h5>
                             <div class="activity-date">March 2025</div>
-                            <p>Implementation across 19 governorates including: Mosul, Babil, Diwanya, Duhok, Waset, Najaf, Muthana, Kirkuk, Thiqar, Diyala, Basra, Salahaddin, Anbar, and Karbala.</p>
+                            <p>Implementation across 19 governorates including:</p>
                             <div class="governorate-links">
-                                <a href="https://www.facebook.com/story.php?story_fbid=1071852084974846&id=100064501940434&mibextid=wwXIfr&rdid=C0EdnYThbKZiXkci" target="_blank">Mosul</a>
                                 <a href="https://www.facebook.com/PFOORG/posts/pfbid02HgKWc2B8qGapUDL3AC6M2kL7ZeJeQVPAnB2DRpwPGWTNDpbzQfKuFiwsNGSmgdQtl" target="_blank">Erbil</a>
-                                <a href="https://www.facebook.com/story.php?story_fbid=1071852084974846&id=100064501940434" target="_blank">Rania (Sulaimanya)</a>
-                                <a href="https://www.facebook.com/story.php?story_fbid=1080706454089409&id=100064501940434" target="_blank">Halabja</a>
-                                <a href="https://www.facebook.com/story.php?story_fbid=1090384709788250&id=100064501940434" target="_blank">Baghdad</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1071852084974846&id=100064501940434&mibextid=wwXIfr&rdid=C0EdnYThbKZiXkci" target="_blank">Rania-Mosul</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1080706454089409&id=100064501940434" target="_blank">Halabja-Basra</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1090384709788250&id=100064501940434" target="_blank">Baghdad-Saladin-Karbala-Anbar</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1077930241033697&id=100064501940434&mibextid=wwXIfr&rdid=iGAvhDMQyNAPp8hX">Dyala-Kirkuk-Dhiqar</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1080000487493339&id=100064501940434&mibextid=wwXIfr&rdid=hSLhhW7YWPgZiezL">Waset-Muthana-Najaf</a>
+                                <a href="https://www.facebook.com/story.php?story_fbid=1072650964894958&id=100064501940434&mibextid=wwXIfr&rdid=jR0KVwCKbWgfIkdv" target="_blank">Babil-Diwanya-Duhok</a>
                                 <a href="https://www.facebook.com/story.php?story_fbid=1069292795230775&id=100064501940434" target="_blank">Misan</a>
                                 <!-- Add more governorate links as needed -->
                             </div>
