--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <span class="stat-label">Governorates</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">35+</span>
+                    <span class="stat-number">+35</span>
                     <span class="stat-label">Media Outlets</span>
                 </div>
             </div>
