--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="container">
             <h1 class="main-title">Promoting Youth Engagement in Peace Building and Security</h1>
-            <h2 class="subtitle">Media Coverage Dashboard 2024-2025</h2>
+            <h2 class="subtitle">Media Coverage Dashboard 2024 - 2025</h2>
             <div class="header-stats">
                 <div class="stat-item">
                     <span class="stat-number">66</span>
