--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="video-item">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FPFOORG%2Fvideos%2F364996976572525%2F&show_text=0&width=400" width="400" height="225" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
                         <div class="video-info">
-                            <h3>PFO Organization</h3>
+                            <h3>Prime Minister Office</h3>
                             <p>Prime Minister's Advisor Speech</p>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="video-item">
                         <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FPFOORG%2Fvideos%2F769176908528237%2F&show_text=0&width=400" width="400" height="225" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"></iframe>
                         <div class="video-info">
-                            <h3>Presidential Office</h3>
+                            <h3>Presidency of the Republic of Iraq</h3>
                             <p>Presidential Support Statement</p>
                         </div>
                     </div>
